# cow

./: .gitignore  CMakeLists.txt  README.md
include/: cow.hpp
src/: CMakeLists.txt  config.h  config.h.in
src/inc/core/: Base.hpp  BaseImpl.hpp  TemplateHelpers.hpp
src/inc/err/: ErrorClasses.hpp
tests/: CMakeLists.txt  CTestConfig.cmake  runner  runner.cpp
tests/unit/: test-core.cpp
